--- a/home.html
+++ b/home.html
@@ -48,8 +48,8 @@
     <div id="close-side-bar" class="fas fa-times"></div>
 
     <div class="user">
-        <img src="images/user-img.png" alt="">
-        <h3>shaikh anas</h3>
+        <img src="images/zero.jpeg" alt="">
+        <h3>JametKudasi</h3>
         <a href="#">log out</a>
     </div>
 
